--- a/src/resources/fxml/Base.css
+++ b/src/resources/fxml/Base.css
@@ -21,3 +21,7 @@
 #menuItemExit > .label {
 	-fx-graphic: url("menu_icons/cancel.png");
 }
+
+#menuItemSettingsBase > .label {
+	-fx-graphic: url("menu_icons/cogwheel.png");
+}
