--- a/src/resources/fxml/Base.fxml
+++ b/src/resources/fxml/Base.fxml
@@ -30,7 +30,7 @@
           <Menu mnemonicParsing="false" text="Wybierz moduł">
             <items>
                   <MenuItem id="menuItemP1" mnemonicParsing="false" text="Mój plan lekcji" />
-                  <MenuItem id="menuItemP2" mnemonicParsing="false" text="Moje wydarzenia" />
+                  <MenuItem id="menuItemP2" fx:id="menuItemEvents" mnemonicParsing="false" onAction="#onMenuItemEvents" text="Moje wydarzenia" />
                   <MenuItem id="menuItemP3" mnemonicParsing="false" styleClass="menuItemIc" text="Moja siłownia" />
                   <SeparatorMenuItem mnemonicParsing="false" />
                   <MenuItem id="menuItemExit" fx:id="menuItemExit" mnemonicParsing="false" onAction="#onMenuItemExit" text="Wyjdź z programu" />
