--- a/src/resources/fxml/Plan.fxml
+++ b/src/resources/fxml/Plan.fxml
@@ -9,13 +9,13 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/9.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.PlanController">
   <columnConstraints>
-    <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+    <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" minWidth="10.0" prefWidth="100.0" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints maxHeight="289.0" minHeight="10.0" prefHeight="289.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="195.0" minHeight="10.0" prefHeight="111.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="289.0" minHeight="10.0" prefHeight="289.0" valignment="TOP" vgrow="ALWAYS" />
+    <RowConstraints maxHeight="195.0" minHeight="10.0" prefHeight="111.0" vgrow="ALWAYS" />
   </rowConstraints>
    <children>
       <GridPane hgap="5.0" GridPane.hgrow="ALWAYS" GridPane.vgrow="ALWAYS">
@@ -117,16 +117,46 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Label>
-                  <TextField text="Praszek" GridPane.rowIndex="1" />
-                  <TextField text="Praszek" GridPane.rowIndex="2" />
-                  <TextField text="Praszek" GridPane.rowIndex="3" />
-                  <TextField text="Praszek" GridPane.rowIndex="4" />
-                  <TextField text="Praszek" GridPane.rowIndex="5" />
-                  <TextField text="Praszek" GridPane.rowIndex="6" />
-                  <TextField text="Praszek" GridPane.rowIndex="7" />
-                  <TextField text="Praszek" GridPane.rowIndex="8" />
-                  <TextField text="Praszek" GridPane.rowIndex="9" />
-                  <TextField text="Praszek" GridPane.rowIndex="10" />
+                  <TextField text="Praszek" GridPane.rowIndex="1">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="2">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="3">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="4">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="5">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="6">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="7">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="8">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="9">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
+                  <TextField text="Praszek" GridPane.rowIndex="10">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextField>
                </children>
             </GridPane>
             <GridPane GridPane.columnIndex="2">
@@ -151,15 +181,42 @@
                         <Font name="Tahoma Bold" size="15.0" />
                      </font>
                   </Label>
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="8" GridPane.vgrow="ALWAYS" />
-                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" GridPane.vgrow="ALWAYS" />
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="3" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="4" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="5" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="6" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="7" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="8" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
+                  <TextArea text="Praszek" GridPane.hgrow="ALWAYS" GridPane.rowIndex="9" GridPane.vgrow="ALWAYS">
+                     <font>
+                        <Font name="Tahoma" size="14.0" />
+                     </font></TextArea>
                </children>
             </GridPane>
             <GridPane GridPane.columnIndex="3">
@@ -237,17 +294,26 @@
       </GridPane>
       <GridPane GridPane.rowIndex="1">
         <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="195.0" minWidth="10.0" prefWidth="135.0" />
-            <ColumnConstraints hgrow="SOMETIMES" maxWidth="448.0" minWidth="10.0" prefWidth="448.0" />
+          <ColumnConstraints halignment="CENTER" hgrow="ALWAYS" maxWidth="195.0" minWidth="10.0" prefWidth="135.0" />
+            <ColumnConstraints halignment="LEFT" hgrow="ALWAYS" maxWidth="448.0" minWidth="10.0" prefWidth="448.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="BOTTOM" vgrow="ALWAYS" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="ALWAYS" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" text="Wróć" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="144.0" text="Zapisz zmiany" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="144.0" text="Cofnij zmiany" GridPane.columnIndex="1" />
+            <Button fx:id="btnReturn" mnemonicParsing="false" onAction="#onBtnReturn" text="Wróć" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font name="Tahoma" size="14.0" />
+               </font></Button>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="181.0" text="Zapisz zmiany" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.rowIndex="1" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font name="Tahoma" size="14.0" />
+               </font></Button>
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="181.0" text="Cofnij zmiany" GridPane.columnIndex="1" GridPane.halignment="LEFT" GridPane.hgrow="ALWAYS" GridPane.valignment="BOTTOM" GridPane.vgrow="ALWAYS">
+               <font>
+                  <Font name="Tahoma" size="14.0" />
+               </font></Button>
          </children>
       </GridPane>
    </children>
