--- a/src/resources/fxml/About.fxml
+++ b/src/resources/fxml/About.fxml
@@ -1,23 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.web.WebView?>
 
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="229.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.AboutController">
+
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="konkurs.fx_contollers.AboutController">
    <children>
-      <VBox prefHeight="200.0" prefWidth="600.0">
-         <children>
-            <TextArea editable="false" prefHeight="200.0" prefWidth="200.0" text="Tutaj będzie informacja o twórcach ...&#10;&#10;" />
-            <HBox prefHeight="33.0" prefWidth="600.0" spacing="25.0">
-               <children>
-                  <Button fx:id="btnOk" mnemonicParsing="false" onAction="#onButtonOkAction" text="OK" />
-                  <Button fx:id="btnExit" mnemonicParsing="false" onAction="#onButtonExitAction" text="Wyjdź z programu" />
-               </children>
-            </HBox>
-         </children>
-      </VBox>
+      <WebView fx:id="webView" prefHeight="200.0" prefWidth="200.0" />
+      <Button fx:id="btnOk" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#onButtonOkAction" prefHeight="30.0" prefWidth="200.0" text="OK" StackPane.alignment="BOTTOM_CENTER">
+         <StackPane.margin>
+            <Insets bottom="10.0" />
+         </StackPane.margin>
+      </Button>
    </children>
 </StackPane>
