--- a/src/resources/fxml/Events.fxml
+++ b/src/resources/fxml/Events.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TreeView?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -54,6 +55,7 @@
                      <children>
                         <CheckBox fx:id="chbEventDisabled" mnemonicParsing="false" text="Wyłącz wydarzenie" />
                         <CheckBox fx:id="chbShowMessage" mnemonicParsing="false" text="Wyświetl komunikat" />
+                        <TextArea prefHeight="200.0" prefWidth="200.0" />
                      </children>
                   </VBox>
                </children>
